update semua file
