# routes/api.php
@@ -1,10 +1,11 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\BookController;
+use App\Http\Controllers\API\AuthController;
+use Illuminate\Http\Request;
 
+// AUTH
 Route::prefix('user')->group(function () {
     Route::post('/register', [AuthController::class, 'register']);
     Route::get('/login', [AuthController::class, 'login'])->name('login');
@@ -15,9 +16,14 @@ Route::prefix('user')->group(function () {
     })->middleware('auth:api');
 });
 
-Route::resource('book', BookController::class)
-    ->only(['index', 'show']);
+// BOOK
+Route::prefix('book')->group(function () {
+    Route::get('/', [BookController::class, 'index']);           // Public
+    Route::get('/{id}', [BookController::class, 'show']);        // Public
 
-Route::resource('book', BookController::class)
-    ->except(['index', 'show'])
-    ->middleware('auth:api');
+    Route::middleware('auth:api')->group(function () {
+        Route::post('/', [BookController::class, 'store']);      // Create (protected)
+        Route::put('/{id}', [BookController::class, 'update']);  // Update (protected)
+        Route::delete('/{id}', [BookController::class, 'destroy']); // Delete (protected)
+    });
+});
